# TTYD

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
core/: __init__.py  analysis.py  dataframe.py  llm.py
ui/: app.py  components.py  styles.py
utils/: data_loader.py  image_handler.py  models.py  monkey_patch.py
